--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
   <div class="up-container">
     <img src="./eisenhower-matrix.jpg" alt="matrix">
-    <a class="up-container__more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details&quest;</a>
+    <a class="up-container__more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?;</a>
   </div>
-<div class="centered-main-page-element">
+<div class="main-container">
   <p id='topSectionForAddingElementToList'>
     <label for="new-task">Add Item</label>
     <div class="task-row-wrapper">
