--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 <body>
   <div class="up-container">
     <img src="./eisenhower-matrix.jpg" alt="matrix">
-    <a class="up-container__more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?;</a>
+    <a 
+    class="up-container__more_inf" 
+    href="https://goal-life.com/page/method/matrix-eisenhower"
+    >
+    Want more details?
+    </a>
   </div>
 <div class="main-container">
   <p id='topSectionForAddingElementToList'>
