(basic-3.3): Keep the names of identifiers and classes concise

--- a/index.html
+++ b/index.html
@@ -16,17 +16,21 @@
     </a>
   </div>
 <div class="main-container">
-  <p id='topSectionForAddingElementToList'>
-    <label for="new-task">Add Item</label>
-    <div class="task-row-wrapper">
-      <input id='new-task'class="task" type="text">
-      <button>Add</button>
+  <p>
+    <label for="new-task">
+      Add Item
+    </label>
+    <div class="main-container__row-wrapper">
+      <input id="new-task" class="main-container__row-wrapper_task" type="text">
+      <button>
+        Add
+      </button>
     </div>
 </p><h3>Todo</h3>
 <ul id='incompleteTasks'>
-<li><input type='checkbox'><label class="task">Pay Bills</label><input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg"></button></li>
-<li class="editMode"><input type="checkbox"><label class="task">Go Shopping</label><input type="text" value="Go Shopping" class="task"><button class='edit'>Save</button><button class="delete"><img src="./remove.svg"></button></li>
-</ul><h3>Completed</h3><ul id="completed-tasks"><li><input type="checkbox" checked><label class="task">See the Doctor</label><input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg"></button>
+<li><input type='checkbox'><label class="main-container__row-wrapper_task">Pay Bills</label><input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg"></button></li>
+<li class="editMode"><input type="checkbox"><label class="main-container__row-wrapper_task">Go Shopping</label><input type="text" value="Go Shopping" class="main-container__row-wrapper_task"><button class='edit'>Save</button><button class="delete"><img src="./remove.svg"></button></li>
+</ul><h3>Completed</h3><ul id="completed-tasks"><li><input type="checkbox" checked><label class="main-container__row-wrapper_task">See the Doctor</label><input type="text" class="main-container__row-wrapper_task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg"></button>
 </li>
 </ul>
 </div>
