refactor(basic-3.4): Tag selectors

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     Want more details?
     </a>
   </div>
-<div class="main-container">
-  <p>
+  <div class="main-container">
     <label for="new-task">
       Add Item
     </label>
@@ -26,14 +25,56 @@
         Add
       </button>
     </div>
-</p><h3>Todo</h3>
-<ul id='incompleteTasks'>
-<li><input type='checkbox'><label class="main-container__row-wrapper_task">Pay Bills</label><input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg"></button></li>
-<li class="editMode"><input type="checkbox"><label class="main-container__row-wrapper_task">Go Shopping</label><input type="text" value="Go Shopping" class="main-container__row-wrapper_task"><button class='edit'>Save</button><button class="delete"><img src="./remove.svg"></button></li>
-</ul><h3>Completed</h3><ul id="completed-tasks"><li><input type="checkbox" checked><label class="main-container__row-wrapper_task">See the Doctor</label><input type="text" class="main-container__row-wrapper_task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg"></button>
-</li>
-</ul>
-</div>
-<script type="text/javascript" SRC="app.js"></script>
+    <h3>Todo</h3>
+    <ul id='incompleteTasks'>
+      <li>
+        <input type='checkbox'>
+        <label class="main-container__row-wrapper_task">
+          Pay Bills
+        </label>
+        <input type="text" class="main-container__row-wrapper_task">
+        <button class="edit">
+          Edit
+        </button>
+        <button class="delete">
+          <img src="./remove.svg">
+        </button>
+      </li>
+      <li class="editMode">
+        <input type="checkbox">
+        <label class="main-container__row-wrapper_task">
+          Go Shopping
+        </label>
+        <input 
+        type="text" 
+        value="Go Shopping" 
+        class="main-container__row-wrapper_task"
+        >
+        <button class="edit">
+          Save
+        </button>
+        <button class="delete">
+          <img src="./remove.svg">
+        </button>
+      </li>
+    </ul>
+    <h3>Completed</h3>
+    <ul id="completed-tasks">
+      <li>
+        <input type="checkbox" checked>
+        <label class="main-container__row-wrapper_task">
+          See the Doctor
+        </label>
+        <input type="text" class="main-container__row-wrapper_task">
+        <button class="edit">
+          Edit
+        </button>
+        <button class="delete">
+          <img src="./remove.svg">
+        </button>
+      </li>
+    </ul>
+  </div>
+<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
