refactor(extended-1.1): Semantics

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css" MEDIA="screen" charset="utf-8">
 </head>
 <body>
-  <div class="up-container">
+  <section class="up-container">
     <img src="./eisenhower-matrix.jpg" alt="matrix">
     <a 
     class="up-container__more_inf" 
@@ -14,8 +14,8 @@
     >
     Want more details?
     </a>
-  </div>
-  <div class="main-container">
+  </section>
+  <section class="main-container">
     <label for="new-task">
       Add Item
     </label>
@@ -25,7 +25,9 @@
         Add
       </button>
     </div>
-    <h3>Todo</h3>
+    <article>
+      Todo
+    </article>
     <ul id='incompleteTasks'>
       <li>
         <input type='checkbox'>
@@ -74,7 +76,7 @@
         </button>
       </li>
     </ul>
-  </div>
+  </section>
 <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
