--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
       </button>
     </div>
     <article>
-      Todo
+      <h3>
+        Todo
+      </h3>
     </article>
     <ul id='incompleteTasks'>
       <li>
@@ -60,7 +62,9 @@
         </button>
       </li>
     </ul>
-    <h3>Completed</h3>
+    <h3>
+      Completed
+    </h3>
     <ul id="completed-tasks">
       <li>
         <input type="checkbox" checked>
