--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       Add Item
     </label>
     <div class="main-container__row-wrapper">
-      <input id="new-task" class="main-container__row-wrapper_task" type="text">
+      <input id="new-task" class="main-container__task" type="text">
       <button>
         Add
       </button>
@@ -30,13 +30,13 @@
         Todo
       </h3>
     </article>
-    <ul id='incompleteTasks'>
+    <ul id="incompleteTasks">
       <li>
         <input type='checkbox'>
-        <label class="main-container__row-wrapper_task">
+        <label class="main-container__task">
           Pay Bills
         </label>
-        <input type="text" class="main-container__row-wrapper_task">
+        <input type="text" class="main-container__task">
         <button class="edit">
           Edit
         </button>
@@ -46,13 +46,13 @@
       </li>
       <li class="editMode">
         <input type="checkbox">
-        <label class="main-container__row-wrapper_task">
+        <label class="main-container__task">
           Go Shopping
         </label>
         <input 
         type="text" 
         value="Go Shopping" 
-        class="main-container__row-wrapper_task"
+        class="main-container__task"
         >
         <button class="edit">
           Save
@@ -68,10 +68,10 @@
     <ul id="completed-tasks">
       <li>
         <input type="checkbox" checked>
-        <label class="main-container__row-wrapper_task">
+        <label class="main-container__task">
           See the Doctor
         </label>
-        <input type="text" class="main-container__row-wrapper_task">
+        <input type="text" class="main-container__task">
         <button class="edit">
           Edit
         </button>
