--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           Edit
         </button>
         <button class="delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="delete">
         </button>
       </li>
       <li class="editMode">
@@ -58,7 +58,7 @@
           Save
         </button>
         <button class="delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="delete">
         </button>
       </li>
     </ul>
@@ -76,7 +76,7 @@
           Edit
         </button>
         <button class="delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="delete">
         </button>
       </li>
     </ul>
