--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </article>
     <ul id="incompleteTasks">
       <li>
-        <input type='checkbox'>
+        <input type="checkbox">
         <label class="main-container__task">
           Pay Bills
         </label>
