--- a/index.html
+++ b/index.html
@@ -81,6 +81,6 @@
       </li>
     </ul>
   </section>
-<script type="text/javascript" src="app.js"></script>
+<script  src="app.js"></script>
 </body>
 </html>
